Refactoring clean arch and swagger docs
