# docs/swagger.yaml
@@ -2,13 +2,17 @@ basePath: /
 definitions:
   domain.Item:
     properties:
-      data:
+      _links:
+        items:
+          $ref: '#/definitions/domain.Link'
+        type: array
+      date:
         example: "2021-02-02"
         type: string
-      descricao:
+      description:
         example: Descrição da tarefa 1
         type: string
-      nome:
+      name:
         example: Tarefa 1
         type: string
       sigla:
@@ -18,6 +22,9 @@ definitions:
     type: object
   domain.Link:
     properties:
+      doc:
+        example: http(s)://<DOMAIN_OR_IP>/doc/index.html
+        type: string
       href:
         example: http(s)://<DOMAIN_OR_IP>/item/{id}
         type: string
@@ -37,15 +44,15 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: todo-list-hateoas.herokuapp.com
   title: Clean architecture and Level 3 of REST
-  version: 2021.2.1.0
+  version: 2021.12.5.0
 paths:
   /item:
     get:
       consumes:
       - application/json
-      description: Search tasks by acronym
+      description: Fetch items by sigla
       parameters:
-      - description: vin
+      - description: vnb
         in: query
         name: sigla
         required: true
@@ -56,27 +63,20 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              allOf:
-              - $ref: '#/definitions/domain.Item'
-              - properties:
-                  links:
-                    items:
-                      $ref: '#/definitions/domain.Link'
-                    type: array
-                type: object
-            type: array
-      summary: Search tasks by acronym
+            $ref: '#/definitions/domain.Item'
+      security:
+      - ApiKeyAuth: []
+      summary: Fetch items by sigla
       tags:
       - item
     post:
       consumes:
       - application/json
-      description: Include tasks into database
+      description: Create new item
       parameters:
       - description: item
         in: body
-        name: item
+        name: company
         required: true
         schema:
           $ref: '#/definitions/domain.Item'
@@ -86,22 +86,17 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/domain.Item'
-            - properties:
-                links:
-                  items:
-                    $ref: '#/definitions/domain.Link'
-                  type: array
-              type: object
-      summary: Include tasks into database
+            $ref: '#/definitions/domain.Item'
+      security:
+      - ApiKeyAuth: []
+      summary: Create new item
       tags:
       - item
   /item/{id}:
     delete:
       consumes:
       - application/json
-      description: Delete tasks
+      description: Delete item by id
       parameters:
       - description: "1"
         in: path
@@ -114,21 +109,16 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/domain.Item'
-            - properties:
-                links:
-                  items:
-                    $ref: '#/definitions/domain.Link'
-                  type: array
-              type: object
-      summary: Delete tasks
+            $ref: '#/definitions/domain.Item'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete item by id
       tags:
       - item
     get:
       consumes:
       - application/json
-      description: Search tasks by ID
+      description: Get item by id
       parameters:
       - description: "1"
         in: path
@@ -141,21 +131,16 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/domain.Item'
-            - properties:
-                links:
-                  items:
-                    $ref: '#/definitions/domain.Link'
-                  type: array
-              type: object
-      summary: Search tasks by ID
+            $ref: '#/definitions/domain.Item'
+      security:
+      - ApiKeyAuth: []
+      summary: Get item by id
       tags:
       - item
     put:
       consumes:
       - application/json
-      description: Change tasks into database
+      description: Update item by id
       parameters:
       - description: item
         in: body
@@ -174,15 +159,10 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/domain.Item'
-            - properties:
-                links:
-                  items:
-                    $ref: '#/definitions/domain.Link'
-                  type: array
-              type: object
-      summary: Change tasks into database
+            $ref: '#/definitions/domain.Item'
+      security:
+      - ApiKeyAuth: []
+      summary: Update item by id
       tags:
       - item
 swagger: "2.0"
